Update study model with appropriate fields from Alfresco
